# AudioPluginTemplate

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/: PluginEditor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioPluginTest.cpp
tools/: cmake_autofill.py  cmake_setup_tool.py
